# user-management

./: .env.example  .gitignore  README.md  ReadME.md  add_test_platform.py  alembic.ini  docker-compose.yml  logging_config_test.py  logging_security_test.py  platform_integration.txt  pyproject.toml  pytest.ini  register_platform.py  requirements-dev.txt  requirements.txt  setup-project.sh  test_platform_apis.py
backend/: main.py
backend/api/: config.py
backend/api/v1/: auth.py  frontend_logs.py  health.py  router.py  users.py
backend/config/: database.py  settings.py  validation.py
backend/core/: dependencies.py  middleware.py  security.py
backend/crud/: platform.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 2b7f42778f26_add_api_key_to_platforms_table.py  6cf1cf7d5244_add_rate_limiting_table.py  79c351441509_redesign_platform_model_to_industry_.py  7f4327ca7210_simplify_platform_access_and_add_audit_.py  e2f50b6cce16_add_platform_and_user_platform_access_.py  ee1bc1276abd_create_users_table.py
backend/models/: __init__.py  base.py  platforms.py  user.py
backend/schemas/: user.py
backend/services/: email_service.py
backend/utils/: log_filters.py  log_formatters.py  logging.py
frontend/: index.html  reset-password.html  security-diagnostic.html  security-test.html  test-microservice.html
frontend/assets/css/: auth.css  dashboard.css  login.css  main.css
frontend/assets/js/: auth.js  config.js  login.js  (+8 more)
scripts/: manage-db.sh  setup-dev.sh  start-database.sh  start-dev.sh
tests/: api_test_script.py  run_logging_tests.py
(+6 files in other folders)
